--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,13 +30,19 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.looksdemo-2.3.1.jar=C:\\Users\\pedrobertolini\\Desktop\\Aparencia-LookAndFeel\\looksdemo-2.3.1.jar
+file.reference.org-netbeans-libs-junit4.jar=C:\\Users\\pedrobertolini\\Desktop\\org-netbeans-libs-junit4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.looksdemo-2.3.1.jar}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${libs.JAVADB_DRIVER_LABEL.classpath}:\
+    ${libs.swing-layout.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}:\
+    ${libs.javac-api.classpath}:\
+    ${file.reference.org-netbeans-libs-junit4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
