MetaShape Internal CRUD java application

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=MS_Administrative
+application.title=MetaShape-Administrative
 application.vendor=pedrobertolini
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,7 +25,7 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/MS_Administrative.jar
+dist.jar=${dist.dir}/MetaShape-Administrative.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
@@ -42,7 +42,8 @@ javac.classpath=\
     ${libs.swing-layout.classpath}:\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.javac-api.classpath}:\
-    ${file.reference.postgresql-42.2.5.jar}
+    ${file.reference.postgresql-42.2.5.jar}:\
+    ${libs.beans-binding.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
