--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,4 @@ do.jar=true
 file.reference.looksdemo-2.3.1.jar=C:\\Users\\pedrobertolini\\Documents\\NetBeansProjects\\MetaShape-Administrative\\lib\\looks-2.3.1.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\pedrobertolini\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/rodrigo/snap/netbeans/common/data/11.2/build.properties
