--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ endorsed.classpath=
 excludes=
 file.reference.looksdemo-2.3.1.jar=../../../Desktop/Aparencia-LookAndFeel/looksdemo-2.3.1.jar
 file.reference.postgresql-42.2.5.jar=lib/postgresql-42.2.5.jar
+file.reference.swing-layout-1.0.4.jar.zip=/home/rodrigo/Downloads/swing-layout-1.0.4.jar.zip
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -47,7 +48,8 @@ javac.classpath=\
     ${libs.PostgreSQLDriver.classpath}:\
     ${libs.javac-api.classpath}:\
     ${file.reference.postgresql-42.2.5.jar}:\
-    ${libs.beans-binding.classpath}
+    ${libs.beans-binding.classpath}:\
+    ${file.reference.swing-layout-1.0.4.jar.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
